# laju-rust

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  index.html  package-lock.json  package.json  sailfish.toml  tsconfig.json  vite.config.ts
.omc/: notepad.md
migrations/: 20250617000000_init.sql
src/: app.rs  config.rs  lib.rs  main.rs
src/db/: mod.rs  rocksdb.rs  sqlite.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: about.rs  auth.rs  home.rs  mod.rs  profile.rs
src/inertia/: layout.rs
src/middleware/: auth.rs  request_id.rs
src/models/: mod.rs  session.rs  user.rs
src/repositories/: mod.rs  session.rs  user.rs
src/routes/: mod.rs
src/services/: auth.rs  example.rs  mod.rs
templates/: about.stpl  home.stpl  root.stpl
ui/: Layout.svelte  app.css  app.svelte  main.ts
ui/Pages/: About.svelte  Dashboard.svelte  Home.svelte  Login.svelte  Profile.svelte  Register.svelte
